@@ -1937,6 +1937,15 @@ operator|=
 literal|null
 expr_stmt|;
 block|}
+name|conf
+operator|.
+name|set
+argument_list|(
+literal|"hadoop.kms.authentication.token.validity"
+argument_list|,
+literal|"1"
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|kerberos
@@ -2298,6 +2307,65 @@ name|isEmpty
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|4000
+argument_list|)
+expr_stmt|;
+name|Token
+argument_list|<
+name|?
+argument_list|>
+index|[]
+name|tokens
+init|=
+operator|(
+operator|(
+name|KMSClientProvider
+operator|)
+name|kp
+operator|)
+operator|.
+name|addDelegationTokens
+argument_list|(
+literal|"myuser"
+argument_list|,
+operator|new
+name|Credentials
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|tokens
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|"kms-dt"
+argument_list|,
+name|tokens
+index|[
+literal|0
+index|]
+operator|.
+name|getKind
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
 return|return
 literal|null
 return|;
@@ -2332,6 +2400,13 @@ argument_list|()
 operator|.
 name|isEmpty
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|4000
 argument_list|)
 expr_stmt|;
 name|Token
